2016-10-31  Eric Herman <eric@freesa.org>

	reorganize the source a bit
	TODO: fight with autotools to avoid installing private header

	* src/eh-printf-private.h: extract prototypes into this file
	* src/eh-printf.c: group the functions a little more nicely
	* Makefile.am: include the new .h
	* TODO: autotools questions, and mention lack of supporting %f

2016-10-30  Eric Herman <eric@freesa.org>

	implement printf on arduino

	* src/eh-sys-context-arduino.cpp: a simple test worked

2016-10-29  Eric Herman <eric@freesa.org>

	extract "eh_vprintf_ctx" from "eh_vsnprintf" for use in
	a "eh_vprintf" function.

	implement "eh_vprintf" and "eh_printf"

	add eh-sys-context.h for OS/platform specific output functions:
		"eh_sys_output_char", "eh_sys_output_str",
	and context constructors/destroyers:
		"start_sys_printf_context", "end_sys_printf_context"

	test printf on linux

	remove the extra "eh-string.h", and "eh-string.c"
		no-longer needed "eh_strncpyl" function
		in-lined the (now static) "eh_strlen" function

	* src/eh-sys-context.h: platform interface
	* src/eh-sys-context-linux.c: implement interface for linux
	* src/eh-printf.h: add eh_printf, eh_vprintf
	* src/eh-printf.c: implement eh_printf, eh_vprintf
		create a buffer context object, and use it
		inline eh_strlen from src/eh-string.h
	* tests/test-linux-print.c: test "eh_printf" on linux
	* tests/test-linux-write.c: create and use context in test
	* misc/pre-tidy.patch: respin the pre-tidy patch
	* Makefile.am: add eh-sys-context.h, test-linux-print,
		remove references to eh-string.c,.h
	* src/eh-string.h: removed ("eh_strncpyl" was unused)
	* src/eh-string.c: removed ("strlen" was inlined)

2016-10-28  Eric Herman <eric@freesa.org>

	Stub-out what I imagine we will need for actual printf,
	write a simple linux implementation

	* src/eh-printf.h: add function stubs to write output
	* src/eh-printf-linux.c: implement functions to write to STDOUT
	* tests/test-linux-write.c: test the linux implementations