@@ -12,7 +12,7 @@
  
  #include <stddef.h>
  #include <stdarg.h>
-@@ -37,8 +39,10 @@
+@@ -44,8 +46,10 @@
  
  int eh_vsnprintf(char *str, size_t size, const char *format, va_list ap);
  
